# arrow-limo

./: ._tmp_apr_review_table.py  .dockerignore  .env.example  .flake8_reports_py.txt  .gitignore  .ruff.toml  2012_COMPLETE_IMPORT_FINAL_REPORT.md  2012_Employee_T4_Report.txt  2012_receipts_by_vendor.html  2012_receipts_by_vendor_report.txt  2013_TAX_FINALIZATION_CHECKLIST.md  ACCOUNTANT_QUICK_CHECKLIST.txt  ACCOUNTING_AUDIT_PROOF_REQUIREMENTS.txt  ACCOUNTING_EXPORT_CAPABILITIES.md  ACCOUNTING_SYSTEM_STATUS.md  AGENT_CONTEXT_SUMMARY.md  ANALYSIS_217_UNMATCHED_QUESTION.md  APPLICATION_COMPLETE_SETUP_GUIDE.md  APPLICATION_STATUS_REPORT.md  ARCHITECTURE_DIAGRAM.md  BACKUP_AND_ROLLBACK_STRATEGY.md  BACKUP_SYSTEM_CONFIRMED.md  BANKING_RECONCILIATION_SESSION_SUMMARY.md  BANKING_TERMINOLOGY_ANALYSIS.txt  BEVERAGE_MANAGEMENT_GUIDE.md  BEVERAGE_ORDERING_INTEGRATION_COMPLETE.md  BEVERAGE_SNAPSHOT_SYSTEM_COMPLETE.md  BEVERAGE_SYSTEM_COMPLETION_SUMMARY.md  BEVERAGE_WORKFLOW_VISUAL_GUIDE.md  BOOKING_FORM_IMPLEMENTATION_GUIDE.md  BOOKING_FORM_IMPROVEMENTS_SUMMARY.md  BOOKING_FORM_INTEGRATION_ACTIONS.md  BOOKING_FORM_NEXT_STEPS_CHECKLIST.md  BOOKING_FORM_QUICK_REFERENCE.md  BOOKING_FORM_RECONSTRUCTION_SUMMARY.md  BOOKING_FORM_REPLACEMENT_GAP_ANALYSIS.md  BOOKING_FORM_STATUS_SUMMARY.md  BOOKING_FORM_VISUAL_LAYOUT.md  BOOKING_MODULE_REDESIGN_SUMMARY.md  BUG_FIXES_SUMMARY_20250103.md  (+866 more)
backup_20260130_235425/: 2012_migrate_negative_payments.py  2012_migrate_remaining_negatives.py  Dockerfile.bak  MASTER_fix_all_1615_balances.py  PHASE3_EXPORT_FUNCTION_TEST.py  PHASE3_INTEGRATION_TESTING.py  (+532 more)
(+6375 files in other folders)
